--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=5000;
-MONGO_URI=mongodb+srv://sainirohan830:GT8fY0UX309UXyl8@cluster0.rckjqfx.mongodb.net/mernstack?retryWrites=true&w=majority
+PORT=5003
+MONGO_URI=mongodb+srv://Rohan:151203Rd@rohan.o8jo9bf.mongodb.net/mernstack?retryWrites=true&w=majority
 SECRET=SECRET
 CLIENT_URL=http://localhost:3000
